rundl.sh improvements
fix rundl.sh -d flag issues in zsh.